--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.15.13",
+    "@mui/material": "^5.15.13",
     "axios": "^1.6.7",
     "framer-motion": "^11.0.6",
     "react": "^18.2.0",
